plugins {
	id "base"
	id "java"
	id "eclipse"
	id "org.springframework.boot" version "3.3.1"
	id "io.spring.dependency-management" version "1.1.5"
	id "io.freefair.lombok" version "8.6"
	id "com.diffplug.spotless" version "6.25.0"
}

// GENERAL
def packageJson = new groovy.json.JsonSlurper().parseText(file("package.json").text);
def packageName = packageJson.name;
def slashIndex = packageName.indexOf("/");
if (0 <= slashIndex) {
	base {
		group = packageName.substring(1, slashIndex);
		archivesName = packageName.substring(slashIndex + 1);
	}
} else {
	base {
		group = "com"
		archivesName = packageName
	}
}
version = packageJson.version;

// REPOSITORY
repositories {
	mavenCentral()
}

compileJava {
	options.release = 21
}

// JAR
jar {
	enabled = false
}

// SPRING BOOT
springBoot {
	mainClass = "app.Main"
}

// SPOTLESS
spotless {
	java {
		palantirJavaFormat()
		indentWithTabs()
		lineEndings "UNIX"
		toggleOffOn()
	}
}

// DEPENDENCIES
dependencies {
	implementation "com.github.winter-cardinal:winter-cardinal:2.1.0"
	implementation "org.springframework.boot:spring-boot-starter-web"
	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
	implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
	implementation "org.springframework.boot:spring-boot-starter-security"
	implementation "org.springframework.boot:spring-boot-starter-validation"
	implementation "org.springframework.boot:spring-boot-starter-websocket"
	runtimeOnly "com.h2database:h2:2.2.224"
}
